--- a/src/assets/style/login.scss
+++ b/src/assets/style/login.scss
@@ -1,5 +1,5 @@
 .login{
-    background-image: url("/static/images/login/bg1.jpg");
+    background-image: url("/static/images/login/bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
@@ -10,7 +10,7 @@
 }
 
 .login-amp{
-    margin-top: -150px;
+    margin-top: -200px;
 }
 
 .login-logo{
