system style code

--- a/src/assets/style/login.scss
+++ b/src/assets/style/login.scss
@@ -1,5 +1,5 @@
 .login{
-    background-image: url("/static/images/login/bg.jpg");
+    background-image: url("/static/images/login/bg1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
