--- a/src/assets/style/ui/base/themeify.icon.scss
+++ b/src/assets/style/ui/base/themeify.icon.scss
@@ -1,7 +1,10 @@
 @font-face {
     font-family: themify;
     src: url(/static/ui/fonts/themify.eot?-fvbane);
-    src: url(/static/ui/fonts/themify.eot?#iefix-fvbane) format('embedded-opentype'), url(/static/ui/fonts/themify.woff?-fvbane) format('woff'), url(/static/ui/fonts/themify.ttf?-fvbane) format('truetype'), url(/static/ui/fonts/themify.svg?-fvbane#themify) format('svg');
+    src: url(/static/ui/fonts/themify.eot?#iefix-fvbane) format('embedded-opentype'),
+    url(/static/ui/fonts/themify.woff?-fvbane) format('woff'),
+    url(/static/ui/fonts/themify.ttf?-fvbane) format('truetype'),
+    url(/static/ui/fonts/themify.svg?-fvbane#themify) format('svg');
     font-weight: 400;
     font-style: normal
 }
