--- a/src/assets/style/ui/base/metor_icon.scss
+++ b/src/assets/style/ui/base/metor_icon.scss
@@ -1,22 +1,39 @@
 /* fallback */
 @font-face {
+
     font-family: 'Material Icons';
     font-style: normal;
     font-weight: 400;
-    src: local('Material Icons'), local('MaterialIcons-Regular'), url(https://fonts.gstatic.com/s/materialicons/v22/2fcrYFNaTjcS6g4U3t-Y5ZjZjT5FdEJ140U2DJYC3mY.woff2) format('woff2');
+    src: url('/static/ui/fonts/MaterialIcons-Regular.eot?t=1519781798480'); /* For IE6-8 */
+    src: url('/static/ui/fonts/MaterialIcons-Regular.woff2?t=1519781798480') format('woff2'),
+    url('/static/ui/fonts/MaterialIcons-Regular.woff?t=1519781798480') format('woff'),
+    url('/static/ui/fonts/MaterialIcons-Regular.ttf?t=1519781798480') format('truetype');
+
+    //src: local('Material Icons'),
+    //local('MaterialIcons-Regular'),
+    //url(https://fonts.gstatic.com/s/materialicons/v22/2fcrYFNaTjcS6g4U3t-Y5ZjZjT5FdEJ140U2DJYC3mY.woff2) format('woff2');
 }
 
 .material-icons {
     font-family: 'Material Icons';
     font-weight: normal;
     font-style: normal;
-    letter-spacing: normal;
-    text-transform: none;
-    line-height: 1;
     display: inline-block;
-    white-space: nowrap;
+    line-height: 1;
+    text-transform: none;
+    letter-spacing: normal;
     word-wrap: normal;
+    white-space: nowrap;
     direction: ltr;
-    -webkit-font-feature-settings: 'liga';
+
+    /* Support for all WebKit browsers. */
     -webkit-font-smoothing: antialiased;
+    /* Support for Safari and Chrome. */
+    text-rendering: optimizeLegibility;
+
+    /* Support for Firefox. */
+    -moz-osx-font-smoothing: grayscale;
+
+    /* Support for IE. */
+    font-feature-settings: 'liga';
 }
