update login page style

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,6 @@
+@import "./share/fonts";
 @import "./share/varable";
 @import "./share/base";
-@import "./ui/main";
 @import "./login";
+@import "./DT";
 
