--- a/src/assets/style/ui/component/component.ui.black.scss
+++ b/src/assets/style/ui/component/component.ui.black.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
-body, html {
-    background-color: #1c1f22;
-}
+//body, html {
+//    background-color: #1c1f22;
+//}
 body {
     color: #9a9da0;
 }
