update common style css

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,6 +1,7 @@
-@import "./share/fonts";
-@import "./share/varable";
-@import "./share/base";
-@import "./login";
-@import "./DT";
+@import "./share/fonts";    //webfont
+@import "./share/varable";  //变量
+@import "./share/base";     //css rereset
+@import "./login";          //登录
+@import "./main";           //主体
+@import "./DT";             //大数据页面
 
