add index page main style

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,6 +1,7 @@
 @import "./share/fonts";    //webfont
 @import "./share/varable";  //变量
 @import "./share/base";     //css rereset
+@import "./components/default";          //组件css样式
 @import "./login";          //登录
 @import "./main";           //主体
 @import "./DT";             //大数据页面
