--- a/src/scss/share/varable.scss
+++ b/src/scss/share/varable.scss
@@ -1,1 +1,3 @@
-$main : #48B617;
+$colorHeaderbg : #4680ff;        // 头部减色
+$colorSiderbg : #fff;        // 侧左导航颜色
+$colorMainbg : #f3f3f3;        // 主体背景色
