--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,25 +6,23 @@
     .system-main{
         min-height: calc(100vh - 70px);
         position: relative;
-        margin-left: 270px;
-        div{
-            height: 500px;
-        }
+        margin-left: 250px;
     }
 }
 
-.sider-navbar{
-    width: 270px;
-    height: 100%;
-    position: fixed;
-    left: 0;
-    top: 70px;
-    bottom: 0;
-    background: $colorSiderbg;
-    overflow: visible;
-    box-shadow: 0 0 11px rgba(0, 0, 0, 0.13);
-}
+
 
 .main-section{
     overflow-x: hidden;
+}
+
+.fp-index{
+    height: calc(100vh - 70px);
+    padding: 30px;
+
+    .fp-index-main{
+        width: 100%;
+        height: 100%;
+        background: #fff;
+    }
 }
